--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
 # These individuals contributed to the hbnb project in this repository 
 
+Hajar EL RHAZOUI <hajar.elrh@gmail.com>
+Chaimae TIBOUDA <chaimae.tibouda01@gmail.com>
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
